cleaned up path and added table 3 new column

--- a/MIDN_figures_and_tables.Rmd
+++ b/MIDN_figures_and_tables.Rmd
@@ -5,6 +5,7 @@ output:
     toc: false
     numbered_sections: false
     number_sections: false
+    self_contained: true
     #includes:
       #in_header: "header_MIDN.html"
       #after_body: "footer.html"
@@ -35,7 +36,8 @@ library(vegan)
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
 park <<- params$park #assigns to global env. so easier for later code to find
-path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' #'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
+#path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
+path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
 midn_names <- read.csv("MIDN_MetaData.csv")
 midn_params <- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
 #park <<- park
@@ -218,8 +220,8 @@ if(!park %in% c("COLO", "FRSP", "GETT", "PETE", "RICH")){
 ```
 ```{r include = F, eval = T, results = 'hide'}
 # Table 3 setup
-tab3_cols <- c("Latin Name", "Common Name", gsub("cycle_", "Cycle ", 
-                                                 names(inv_spp_final[,3:ncol(inv_spp_final)])))
+tab3_cols <- c("Latin Name", "Common Name", "Invasive", gsub("cycle_", "Cycle ", 
+                                                 names(inv_spp_final[,4:ncol(inv_spp_final)])))
 
 inv_spp <- inv_spp_final |> filter(!ScientificName %in% "None present")
 
@@ -277,38 +279,13 @@ margin-bottom: 10px;
 ```{r results = 'asis', warning = F, message = F}
 includeHTML("html_header.html")
 ```
-
-|       A. 
-```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
-include_graphics(paste0(new_path, "figures/Figure_1A_", park, "_regen_by_size_class_by_cycle.svg"))
-```
-
-|       B. 
-```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
-include_graphics(paste0(new_path, "figures/Figure_1B_", park, "_tree_dbh_dist_by_cycle.svg"))
-```
-
-```{r results = 'asis'}
-cat(paste0("<p><b>Figure 1.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
-    paste(cycle_labs, collapse = "; "), ". ", 
-    ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""),
-    "Figure A shows regeneration densities by size class. Figure B shows tree density by diameter at breast height (DBH) increments. Error bars are 95% bootstrapped confidence intervals to account for non-normal error. An asterisk denotes a linear DBH distribution that is indicative of long-term recruitment failure.</p>", sep = ""))
-```
-
-<!-- Start of page 2 -->
-
-### {.page-break-before}
-
-```{r results = 'asis', warning = F, message = F}
-includeHTML("html_header.html")
-```
 <br>
 ```{r out.width = "45%", out.height = "40%", out.extra = 'style="margin-left:130px; margin-top:-10px;"'}
-include_graphics(paste0(new_path, "figures/Figure_2_Regen_Debt_table.svg"))
+include_graphics(paste0(new_path, "figures/Figure_1_Regen_Debt_table.svg"))
 ```
 
 ```{r results = 'asis'}
-cat("<p><b>Figure 2.</b> Regeneration Debt status for the most recent 4-year census (",
+cat("<p><b>Figure 1.</b> Regeneration Debt status for the most recent 4-year census (",
     from_4yr, " \U2013 ", to, ") in ", park_long, " (", park, "). ", " Flat Tree Diam. Dist. stands for Flat
 Tree Diameter Distribution. If TRUE, the density of small trees is lower than expected due to
 chronic regeneration failure. Sapling/Seedling Composition is the % of total stems composed of native canopy-forming species. Sorenson is a measure of how closely the regen. layer matches canopy composition. For more details on metric calculations, thresholds and assessment of status, see <a href ='https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.2837'>Miller et al. 2023</a>.</p>", sep = "")
@@ -316,17 +293,41 @@ chronic regeneration failure. Sapling/Seedling Composition is the % of total ste
 <br>
 
 ```{r out.width = "80%", out.height = "40%", out.extra = 'style="margin-left:100px;margin-top:-25px;"'}
-include_graphics(paste0(new_path, "figures/", "Figure_3_", park, "_DBI_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/", "Figure_2_", park, "_DBI_by_cycle.svg"))
 ```
 
 ```{r results = 'asis'}
-cat(paste0("<p><b>Figure 3.</b> Deer browse impacts by cycle in ", park_long, " (", park, "). ",
+cat(paste0("<p><b>Figure 2.</b> Deer browse impacts by cycle in ", park_long, " (", park, "). ",
     paste(cycle_labs, collapse = "; "), ". ", 
     ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), 
     sep = ""))
 
 ```
-<br>
+
+<!-- Start of page 2 -->
+### {.page-break-before}
+
+```{r results = 'asis', warning = F, message = F}
+includeHTML("html_header.html")
+```
+
+|       A. 
+```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
+include_graphics(paste0(new_path, "figures/Figure_3A_", park, "_regen_by_size_class_by_cycle.svg"))
+```
+
+|       B. 
+```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
+include_graphics(paste0(new_path, "figures/Figure_3B_", park, "_tree_dbh_dist_by_cycle.svg"))
+```
+
+```{r results = 'asis'}
+cat(paste0("<p><b>Figure 3.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
+    paste(cycle_labs, collapse = "; "), ". ", 
+    ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""),
+    "Figure A shows regeneration densities by size class. Figure B shows tree density by diameter at breast height (DBH) increments. Error bars are 95% bootstrapped confidence intervals to account for non-normal error. An asterisk denotes a linear DBH distribution that is indicative of long-term recruitment failure.</p>", sep = ""))
+```
+
 
 <!-- Start of page 3 -->
 
@@ -552,7 +553,7 @@ includeHTML("table4.html")
 <br>
 
 
-```{r error = T, results = 'hide', echo = FALSE, include = FALSE}
+```{r error = T, results = 'hide', echo = FALSE, include = FALSE, eval= F}
 # remove saved tables so they're not included in other parks that errored
 file.remove(c("table1.html", "table2.html", "table3.html", "table4.html", 
               'table1a.html', 'table1b.html', 'table1c.html', 'table1d.html', 
