updated figure order; switched to png; applied MIDN changes to SAHI and ASIS; closes #8

--- a/SAHI_figures_and_tables.Rmd
+++ b/SAHI_figures_and_tables.Rmd
@@ -32,7 +32,8 @@ library(vegan)
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
 park <<- "SAHI" #assigns to global env. so easier for later code to find
-path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
+path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
+#path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
 midn_names <- read.csv("MIDN_MetaData.csv")
 midn_params <- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
 #park <<- park
@@ -73,7 +74,7 @@ save_html(html_header, "html_header.html")
 ```
 
 ```{r include = F, cache = F}
-source('source_script_MIDN.R') # sets up parameters. Can also run all the scripts below, but turned off for easier troubleshooting.
+source('source_script_SAHI.R') # sets up parameters. Can also run all the scripts below, but turned off for easier troubleshooting.
 ```
 ```{r include = F, cache = F}
 source('./scripts/forest_summary_code_SAHI.R') # main figures and tables
@@ -239,7 +240,7 @@ includeHTML("html_header.html")
 ```
 <br>
 ```{r out.width = "45%", out.height = "40%", out.extra = 'style="margin-left:130px; margin-top:-10px;"'}
-include_graphics(paste0(new_path, "figures/Figure_1_Regen_Debt_table.svg"))
+include_graphics(paste0(new_path, "figures/Figure_1_Regen_Debt_table.png"))
 ```
 
 ```{r results = 'asis'}
@@ -251,11 +252,11 @@ chronic regeneration failure. Sapling/Seedling Composition is the % of total ste
 <br>
 
 ```{r out.width = "80%", out.height = "40%", out.extra = 'style="margin-left:100px;margin-top:-25px;"'}
-include_graphics(paste0(new_path, "figures/", "Figure_2_", park, "_DBI_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/", "Figure_2_", park, "_DBI_by_cycle.png"))
 ```
 
 ```{r results = 'asis'}
-cat(paste0("<p><b>Figure 3.</b> Deer browse impacts by cycle in ", park_long, " (", park, "). ",
+cat(paste0("<p><b>Figure 2.</b> Deer browse impacts by cycle in ", park_long, " (", park, "). ",
     paste(cycle_labs, collapse = "; "), ". ", 
     sep = ""))
 
@@ -272,16 +273,16 @@ includeHTML("html_header.html")
 
 |       A. 
 ```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
-include_graphics(paste0(new_path, "figures/Figure_3A_", park, "_regen_by_size_class_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_3A_", park, "_regen_by_size_class_by_cycle.png"))
 ```
 
 |       B. 
 ```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
-include_graphics(paste0(new_path, "figures/Figure_3B_", park, "_tree_dbh_dist_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_3B_", park, "_tree_dbh_dist_by_cycle.png"))
 ```
 
 ```{r results = 'asis'}
-cat(paste0("<p><b>Figure 1.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
+cat(paste0("<p><b>Figure 3.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
     paste(cycle_labs, collapse = "; "), ". ", 
     
     "Figure A shows regeneration densities by size class. Figure B shows tree density by diameter at breast height (DBH) increments. Error bars are +/- 1 SE. An asterisk denotes a linear DBH distribution that is indicative of long-term recruitment failure.</p>", sep = ""))
@@ -295,7 +296,7 @@ includeHTML("html_header.html")
 ```
 
 ```{r out.width = "98%", out.height = "95%"}
-include_graphics(paste0(new_path, "figures/Figure_4_", park, "_smoothed_regen_by_species_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_4_", park, "_smoothed_regen_by_species_cycle.png"))
 ```
 
 ```{r results = 'asis'}
@@ -313,7 +314,7 @@ includeHTML("html_header.html")
 ```
 
 ```{r out.width = "98%", out.height = "95%"}
-include_graphics(paste0(new_path, "figures/Figure_5_", park, "_smoothed_tree_dens_BA_by_species_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_5_", park, "_smoothed_tree_dens_BA_by_species_cycle.png"))
 ```
 
 ```{r results = 'asis'}
@@ -331,7 +332,7 @@ includeHTML("html_header.html")
 ```
 
 ```{r out.width = "98%", out.height = "50%"}
-include_graphics(paste0(new_path, "figures/Figure_6_", park, "_smoothed_invasive_cover_by_guild_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_6_", park, "_smoothed_invasive_cover_by_guild_cycle.png"))
 ```
 
 ```{r results = 'asis'}
@@ -407,7 +408,7 @@ includeHTML("table4.html")
 <br>
 
 
-```{r error = T, results = 'hide', echo = FALSE, include = FALSE}
+```{r error = T, results = 'hide', echo = FALSE, include = FALSE, eval = F}
 file.remove(c("table1.html", "table2.html", "table3.html", "table4.html"))
 ```
 
