--- a/ASIS_figures_and_tables.Rmd
+++ b/ASIS_figures_and_tables.Rmd
@@ -33,7 +33,8 @@ library(vegan)
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
 park <<- "ASIS" #assigns to global env. so easier for later code to find
-path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
+path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
+#path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
 midn_names <- read.csv("MIDN_MetaData.csv")
 midn_params <- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
 #park <<- park
@@ -241,11 +242,11 @@ includeHTML("html_header.html")
 ```
 <br>
 ```{r out.width = "45%", out.height = "40%", out.extra = 'style="margin-left:130px; margin-top:-10px;"'}
-include_graphics(paste0(new_path, "figures/Figure_2_Regen_Debt_table.svg"))
+include_graphics(paste0(new_path, "figures/Figure_1_Regen_Debt_table.png"))
 ```
 
 ```{r results = 'asis'}
-cat("<p><b>Figure 2.</b> Regeneration Debt status for the most recent 4-year census (",
+cat("<p><b>Figure 1.</b> Regeneration Debt status for the most recent 4-year census (",
     from_4yr, " \U2013 ", to, ") in ", park_long, " (", park, "). ", " Flat Tree Diam. Dist. stands for Flat
 Tree Diameter Distribution. If TRUE, the density of small trees is lower than expected due to
 chronic regeneration failure. Sapling/Seedling Composition is the % of total stems composed of native canopy-forming species. Sorenson is a measure of how closely the regen. layer matches canopy composition. For more details on metric calculations, thresholds and assessment of status, see <a href ='https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.2837'>Miller et al. 2023</a>.</p>", sep = "")
@@ -253,11 +254,11 @@ chronic regeneration failure. Sapling/Seedling Composition is the % of total ste
 <br>
 
 ```{r out.width = "80%", out.height = "40%", out.extra = 'style="margin-left:100px;margin-top:-25px;"'}
-include_graphics(paste0(new_path, "figures/", "Figure_3_", park, "_DBI_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/", "Figure_2_", park, "_DBI_by_cycle.png"))
 ```
 
 ```{r results = 'asis'}
-cat(paste0("<p><b>Figure 3.</b> Ungulate browse impacts in cycle 1 in ", park_long, " (", park, "). Note that this index does not distinguish deer from horse browse in ", park, ". ",
+cat(paste0("<p><b>Figure 2.</b> Ungulate browse impacts in cycle 1 in ", park_long, " (", park, "). Note that this index does not distinguish deer from horse browse in ", park, ". ",
     paste(cycle_labs, collapse = "; "), ". ", 
     sep = ""))
 
@@ -274,16 +275,16 @@ includeHTML("html_header.html")
 
 |       A. 
 ```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
-include_graphics(paste0(new_path, "figures/Figure_1A_", park, "_regen_by_size_class_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_3A_", park, "_regen_by_size_class_by_cycle.png"))
 ```
 
 |       B. 
 ```{r out.width = "92%", out.height="40%", out.extra = 'style="margin-top:-10px;margin-left:20px;"'}
-include_graphics(paste0(new_path, "figures/Figure_1B_", park, "_tree_dbh_dist_by_cycle.svg"))
+include_graphics(paste0(new_path, "figures/Figure_3B_", park, "_tree_dbh_dist_by_cycle.png"))
 ```
 
 ```{r results = 'asis'}
-cat(paste0("<p><b>Figure 1.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
+cat(paste0("<p><b>Figure 3.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
     paste(cycle_labs, collapse = "; "), ". ", 
     
     "Figure A shows regeneration densities by size class. Figure B shows tree density by diameter at breast height (DBH) increments. Error bars are +/- 1 SE. An asterisk denotes a linear DBH distribution that is indicative of long-term recruitment failure.</p>", sep = ""))
@@ -297,7 +298,7 @@ includeHTML("html_header.html")
 ```
 
 ```{r out.width = "98%", out.height = "95%"}
-include_graphics(paste0(new_path, "figures/Figure_4_", park, "_tree_sapling_regen_by_species.svg"))
+include_graphics(paste0(new_path, "figures/Figure_4_", park, "_tree_sapling_regen_by_species.png"))
 ```
 
 ```{r results = 'asis'}
@@ -372,7 +373,7 @@ includeHTML("table4.html")
 ```
 <br>
 
-```{r error = T, results = 'hide', echo = FALSE, include = FALSE}
+```{r error = T, results = 'hide', echo = FALSE, include = FALSE, eval = F}
 file.remove(c("table1.html", "table2.html", "table3.html", "table4.html"))
 ```
 
