--- a/MIDN_figures_and_tables.Rmd
+++ b/MIDN_figures_and_tables.Rmd
@@ -6,13 +6,23 @@ output:
     numbered_sections: false
     number_sections: false
     self_contained: true
-    #includes:
-      #in_header: "header_MIDN.html"
-      #after_body: "footer.html"
+    # includes:
+    #   in_header: "header_MIDN.html"
+    #   after_body: "footer_MIDN.html"
 params:
   park: 'APCO' 
 
 ---
+
+```{r eval = F, include = F}
+#++++++++ For every year, the following must be updated: ++++++++++
+# 1. Update the MIDN_params.csv to include the latest years for each park 
+# 2. Update the month and date in the www/styles_MIDN_pages.css. 
+#    Look for it in the @page > @bottom-left section. 
+#++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+```
+
+
 ```{r setup, include = FALSE, results = 'hide'}
 knitr::opts_chunk$set(echo = FALSE, fig.align = 'center')
 options(knitr.kable.NA = '-')
@@ -36,11 +46,10 @@ library(vegan)
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
 park <<- params$park #assigns to global env. so easier for later code to find
-path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
-#path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
+#path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
+path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/' # output files go here
 midn_names <- read.csv("MIDN_MetaData.csv")
 midn_params <- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
-#park <<- park
 from <<- as.numeric(midn_params$from[midn_params$park == park])
 from_4yr <<- as.numeric(midn_params$from_4yr[midn_params$park == park])
 to <<- as.numeric(midn_params$to[midn_params$park == park])
