2024 caption updates + adding new Table 5

--- a/MIDN_figures_and_tables.Rmd
+++ b/MIDN_figures_and_tables.Rmd
@@ -9,8 +9,8 @@ output:
     # includes:
     #   in_header: "header_MIDN.html"
     #   after_body: "footer_MIDN.html"
-params:
-  park: 'APCO' 
+# params:
+# park: 'COLO'
 
 ---
 
@@ -45,21 +45,22 @@ library(vegan)
 
 ```{r}
 # assign params to global env. for source files to find. Makes iterating easier.
-park <<- params$park #assigns to global env. so easier for later code to find
-path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' 
-#path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/'
-# output files go here
-midn_names <- read.csv("MIDN_MetaData.csv")
-midn_params <- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
+park <<- park #For running 'generate_all_MIDN_reports.R'
+# park <<- "BOWA" #for running indiv. parks
+path <<- 'C:/01_NETN/Forest_Health/Data_Summaries/2024 Data Summaries/MIDN/' #ces path
+# path <<- 'C:/NETN/Monitoring_Projects/Forest_Health/Data_Summaries/'
+# # output files go here
+midn_names <<- read.csv("MIDN_MetaData.csv")
+midn_params <<- read.csv("MIDN_params.csv") # !!!! MUST UPDATE EVERY YEAR !!!!
 from <<- as.numeric(midn_params$from[midn_params$park == park])
 from_4yr <<- as.numeric(midn_params$from_4yr[midn_params$park == park])
 to <<- as.numeric(midn_params$to[midn_params$park == park])
 cycle_latest <<- as.numeric(midn_params$cycle_latest[midn_params$park == park])
-# from_prev <<- as.numeric(midn_params$from_prev[midn_params$park == park])
-# to_prev <<- as.numeric(midn_params$to_prev[midn_params$park == park])
+# # from_prev <<- as.numeric(midn_params$from_prev[midn_params$park == park])
+# # to_prev <<- as.numeric(midn_params$to_prev[midn_params$park == park])
 QAQC <<- FALSE
 locType <<- 'VS'
-#+++ NOTE: IF GET add_header_above error, need to update cycle_latest in MIDN_params.csv  +++
+# #+++ NOTE: IF GET add_header_above error, need to update cycle_latest in MIDN_params.csv  +++
 park_long <- midn_names$LongName[midn_names$ParkCode == park]
 park_title <- midn_names$LongName_title[midn_names$ParkCode == park]
 network_long <- midn_names$Network_long[midn_names$ParkCode == park]
@@ -101,19 +102,23 @@ source('./scripts/tree_regen_stem_changes_by_species_loess_MIDN.R') # smoothed c
 ```
 
 ```{r results = 'hide', include = F}
-cap_t1 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 1.</b> Average plot-level seedling and sapling stem densities (stems per m<sup>2</sup>) and stocking index (at the 2m radius scale) by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m<sup>2</sup> and 0.14 saplings/m<sup>2</sup> or have a stocking index >100. These are the same thresholds used in Figure 2 and are described in Miller et al. 2023. ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "</p>")
+cap_t1 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 1.</b> Average plot-level seedling and sapling stem densities (stems per m<sup>2</sup>) and stocking index (at the 2m radius scale) by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m<sup>2</sup> and 0.14 saplings/m<sup>2</sup> or have a stocking index >100. These are the same thresholds used in Figure 2 and are described in Miller et al. 2023. ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b>", ""), ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete.</b>", ""), "</p>")
 
-cap_t1_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 1 (cont.).</b> Average plot-level seedling and sapling stem densities (stems per m<sup>2</sup>) and stocking index (at the 2m radius scale) by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m<sup>2</sup> and 0.14 saplings/m<sup>2</sup> or have a stocking index >100. These are the same thresholds used in Figure 2 and are described in Miller et al. 2023. ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "</p>")
+cap_t1_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 1 (cont.).</b> Average plot-level seedling and sapling stem densities (stems per m<sup>2</sup>) and stocking index (at the 2m radius scale) by cycle. Only native, canopy-forming species are included. Note that Fraxinus spp. (ash species) are no longer considered canopy-forming species. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). The stocking index quantifies whether current regeneration densities are sufficient to restock a forest canopy. The index is a weighted sum of seedling and sapling densities where larger seedling size classes get higher weights. Cells highlighted in green are plots that meet the minimum management target of 0.25 seedlings/m<sup>2</sup> and 0.14 saplings/m<sup>2</sup> or have a stocking index >100. These are the same thresholds used in Figure 2 and are described in Miller et al. 2023. ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b>", ""), ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete.</b>", ""), "</p>")
 
-cap_t2 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 2.</b> Average % cover and number of invasive species detected in each plot by cycle. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), " Plots with at least 10% average cover or 4 or more invasive species present are in yellow. Average cover and species counts may be increasing over time due to protocol changes, including additions to the indicator species list over time, a plot search for indicator species starting in 2009 and all woody species being sampled in quadrats starting in 2019. More details can be found in the <a href='https://irma.nps.gov/DataStore/Reference/Profile/2297098'>MIDN Summary of Major Protocol Changes</a>", "</p>")
+cap_t2 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 2.</b> Average % cover and number of invasive species detected in each plot by cycle. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b> ", ""),  ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete.</b>", ""), " Plots with at least 10% average cover or 4 or more invasive species present are in yellow. Protocol evolution over time has impacted invasive species % cover and counts. The estimated change in invasive species % cover and count in ", park_long, " (", park, ") that can be attributed to protocol change is ", InvCovComp, "% and ", InvCountComp, " species per plot for the most recent census. More details can be found in the <a href='https://irma.nps.gov/DataStore/Reference/Profile/2189101'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
 
-cap_t2_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 2 (cont.).</b> Average % cover and number of invasive species detected in each plot by cycle. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), " Plots with at least 10% average cover or 4 or more invasive species present are in yellow. Average cover and species counts may be increasing over time due to protocol changes, including additions to the indicator species list over time, a plot search for indicator species starting in 2009 and all woody species being sampled in quadrats starting in 2019. More details can be found in the <a href='https://irma.nps.gov/DataStore/Reference/Profile/2297098'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
+cap_t2_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 2 (cont.).</b> Average % cover and number of invasive species detected in each plot by cycle. ", paste0(cycle_labs, collapse = "; "), ". Plots are sampled in 4-year rotations, with a quarter of the plots sampled each year (i.e. a panel). ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b> ", ""),  ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete.</b>", "")," Plots with at least 10% average cover or 4 or more invasive species present are in yellow. Protocol evolution over time has impacted invasive species % cover and counts. The estimated change in invasive species % cover and count in ", park_long, " (", park, ") that can be attributed to protocol change is ", InvCovComp, "% and ", InvCountComp, " species per plot for the most recent census. More details can be found in the <a href='https://irma.nps.gov/DataStore/Reference/Profile/2189101'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
 
-cap_t3 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 3.</b> Number of plots out of ", num_plots, " where priority invasive species were detected. ", paste0(cycle_labs, collapse = "; "), ". Species on the list include all exotic vascular plant species that are capable of dominating Eastern US forest habitats, and does not include all exotic species detected in MIDN forest plots. ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "Average cover and species counts may be increasing over time due to additions to the protocols, including a plot search for additional indicator species starting in 2009 and all woody species being sampled in quadrats starting in 2019. Species have also been added to the indicator list over time. More details can be found in the <a href='https://irma.nps.gov/DataStore/Reference/Profile/2297098'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
+cap_t3 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 3.</b> Number of plots out of ", num_plots, " where exotic species were detected. ", paste0(cycle_labs, collapse = "; "), ".  Priority invasive species capable of dominating Eastern US forest habitats are highlighed in yellow. ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b>", ""),  ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete.</b>", "")," Protocol evolution has impacted the number of invasive species monitored through time. Species were not consistently monitored before the year specified in the Year Added column. More details can be found in the <a href=https://irma.nps.gov/DataStore/Reference/Profile/2189101'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
 
-cap_t3_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 3 (cont.).</b> Number of plots out of ", num_plots, " where priority invasive species were detected. ", paste0(cycle_labs, collapse = "; "), ". Species on the list include all exotic vascular plant species that are capable of dominating Eastern US forest habitats, and does not include all exotic species detected in MIDN forest plots. ", ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete.", ""), "Average cover and species counts may be increasing over time due to additions to the protocols, including a plot search for additional indicator species starting in 2009 and all woody species being sampled in quadrats starting in 2019. Species have also been added to the indicator list over time. More details can be found in the <a href='https://irma.nps.gov/DataStore/Reference/Profile/2297098'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
+cap_t3_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 3 (cont.).</b> Number of plots out of ", num_plots, " where exotic species were detected. ", paste0(cycle_labs, collapse = "; "), ".  Priority invasive species capable of dominating Eastern US forest habitats are highlighed in yellow. ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b>", ""),  ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete.</b>", "")," Protocol evolution has impacted the number of invasive species monitored through time. Species were not consistently monitored before the year specified in the Year Added column. More details can be found in the <a href=https://irma.nps.gov/DataStore/Reference/Profile/2189101'>MIDN Summary of Major Protocol Changes.</a>", "</p>")
 
 cap_t4 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 4.</b> Invasive plant and pest/pathogen early detections in ", park_long, " observed in the most recent census of each plot. Coordinates are in UTM NAD83 Zone ", substr(park_crs, 4, 5), "N.",  "</p>")
+
+cap_t5 <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 5.</b> List of tree species included in Maps 3 and 4 and how each was displayed.", "</p>")
+
+cap_t5_cont <- paste0("<p style='font-size:10px; padding:0 5px;'><b>Table 5.</b> List of tree species included in Maps 3 and 4 and how each was displayed.", "</p>")
 ```
 
 ```{r include = F, eval = T, results = 'hide'}
@@ -230,8 +235,8 @@ if(!park %in% c("COLO", "FRSP", "GETT", "PETE", "RICH")){
 ```
 ```{r include = F, eval = T, results = 'hide'}
 # Table 3 setup
-tab3_cols <- c("Latin Name", "Common Name", "Invasive", gsub("cycle_", "Cycle ", 
-                                                 names(inv_spp_final[,4:ncol(inv_spp_final)])))
+tab3_cols <- c("Latin Name", "Common Name", "Invasive", "Year Added", gsub("cycle_", "Cycle ", 
+                                                 names(inv_spp_final[,5:ncol(inv_spp_final)])))
 
 inv_spp <- inv_spp_final |> filter(!ScientificName %in% "None present")
 
@@ -245,6 +250,7 @@ tab3 <-
   column_spec(ncol(inv_spp), border_right = T) %>%
   column_spec(1:ncol(inv_spp), border_left = T, border_right = T) %>%
   column_spec(1, extra_css =  "border-left: 1.5px solid #000000;") %>%
+  row_spec(which(inv_spp$InvasiveMIDN == "Yes"), background =  "#F2F2A0") %>%
   row_spec(0:nrow(inv_spp), extra_css = "border-top: 1px solid #000000;") %>%
   row_spec(0:nrow(inv_spp), extra_css = "border-bottom: 1px solid #000000;") %>%
   #landscape(margin = "1cm") %>%
@@ -268,6 +274,22 @@ tab4 <-
 tab4 <- HTML("<p>No invasive species early detections observed in most recent census. </p>")  
 save_html(tab4, "table4.html")
 }
+```
+```{r}
+if(nrow(grp_spp)>0){
+tab5 <- 
+  kable(grp_spp, col.names = c("Latin Name", "Group: Map 3. Regeneration", "Group: Map 4. Tree Canopy"),
+        align = c('l', 'c', 'c'), format = 'html',
+        table.attr = "style='width:95%;height:95%;'") |> 
+  kable_styling(fixed_thead = FALSE, bootstrap_options = 'condensed',
+                full_width = FALSE, position = 'center', font_size = 9) %>%
+  column_spec(1, italic = TRUE) %>%
+  row_spec(0:nrow(grp_spp), extra_css = "border-top: 1px solid #000000;") %>%
+  row_spec(0:nrow(grp_spp), extra_css = "border-bottom: 1px solid #000000;") %>%
+  row_spec(1:nrow(grp_spp), extra_css = "padding: 1px") %>%
+  #landscape(margin = "1cm") %>%
+  save_kable(file = "table5.html", self_contained = F)
+} 
 ```
 
 
@@ -308,8 +330,7 @@ include_graphics(paste0(new_path, "figures/", "Figure_2_", park, "_DBI_by_cycle.
 
 ```{r results = 'asis'}
 cat(paste0("<p><b>Figure 2.</b> Deer browse impacts by cycle in ", park_long, " (", park, "). ",
-    paste(cycle_labs, collapse = "; "), ". ", 
-    ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""), 
+    paste(cycle_labs, collapse = "; "), ". ", ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete.</b>", ""), ifelse(park == "COLO", "<b>Note that Cycle 4 only partially complete.</b>", ""),
     sep = ""))
 
 ```
@@ -334,7 +355,7 @@ include_graphics(paste0(new_path, "figures/Figure_3B_", park, "_tree_dbh_dist_by
 ```{r results = 'asis'}
 cat(paste0("<p><b>Figure 3.</b> Stem density distributions by cycle in ", park_long, " (", park, "). ",
     paste(cycle_labs, collapse = "; "), ". ", 
-    ifelse(length(cycle_labs) == 5, "Note that cycle 5 is only partially complete. ", ""),
+    ifelse(length(cycle_labs) == 5, "<b>Note that Cycle 5 is only partially complete. </b>", ""), ifelse(park == "COLO", "<b>Note that Cycle 4 is only partially complete. </b>", ""),
     "Figure A shows regeneration densities by size class. Figure B shows tree density by diameter at breast height (DBH) increments. Error bars are 95% bootstrapped confidence intervals to account for non-normal error. An asterisk denotes a linear DBH distribution that is indicative of long-term recruitment failure.</p>", sep = ""))
 ```
 
@@ -351,9 +372,9 @@ include_graphics(paste0(new_path, "figures/Figure_4_", park, "_smoothed_regen_by
 ```
 
 ```{r results = 'asis'}
-cat("<p><b>Figure 4.</b> Loess smoothed changes in stem density for seedlings (A) and saplings (B) by
+cat(paste0("<p><b>Figure 4.</b> Loess smoothed changes in stem density for seedlings (A) and saplings (B) by
 species group and sample year in ", park_long, ". Specified loess span
-approximated a linear trend between consecutive sample events per panel.</p>", sep = "")
+approximated a linear trend between consecutive sample events per panel.</p>", sep = ""))
 ```
 <br>
 
@@ -562,10 +583,25 @@ includeHTML("table4.html")
 ```
 <br>
 
+<!-- Start of page 10 -->
+
+###   {.page-break-before}
+```{r results = 'asis', warning = F, message = F}
+includeHTML("html_header.html")
+```
+
+```{r results = 'asis'}
+cat(cap_t5)
+```
+
+```{r echo = F, eval = T, warning = F, message = F}
+includeHTML("table5.html")
+```
+<br>
 
 ```{r error = T, results = 'hide', echo = FALSE, include = FALSE, eval= F}
 # remove saved tables so they're not included in other parks that errored
-file.remove(c("table1.html", "table2.html", "table3.html", "table4.html", 
+file.remove(c("table1.html", "table2.html", "table3.html", "table4.html", "table5.html", 
               'table1a.html', 'table1b.html', 'table1c.html', 'table1d.html', 
               'table2a.html', 'table2b.html', 'table2c.html', 'table2d.html'))
 ```
